<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Notika</string>
    <string name="sign_up_today">Sign up Today</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_login_here">Have an account? Login here</string>
    <string name="first_time_sign_up_here">First time? Sign up here</string>
    <string name="login">Login</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="already_in_use">Email already in use</string>
    <string name="something_went_wrong">Something went wrong please try again</string>
    <string name="title">Title</string>
    <string name="enter_your_new_note_here">Enter your new note here</string>
    <string name="add_note_title">Add new note</string>
    <string name="all_notes">All Notes</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorite Notes</string>
    <string name="settings">Settings</string>
    <string name="jacinta">Jacinta</string>
    <string name="nikita">Nikita</string>
    <string name="font">Font</string>
    <string name="logout">LOGOUT</string>
    <string name="check_input">Please, check your input</string>
    <string name="wrong">Something went wrong</string>
    <string name="image_to_text">Image to Text</string>
    <string name="summary">summary</string>
    <string name="total_notes">Total Notes</string>
    <string name="favourite_notes">Favourite Notes</string>
    <string name="popular_catgory">Popular Category</string>

    <string-array name="categories">
        <item name="cat_none">No category</item>
        <item name="cat_travel">Travel</item>
        <item name="cat_work">Work</item>
        <item name="cat_personal">Personal</item>
    </string-array>

</resources>