<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <include layout="@layout/toolbar_layout"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"

    >

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="250dp"

        app:civ_border_color="@color/colorPrimaryText"
        app:civ_border_width="2dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#FF07080C"
        app:civ_shadow_radius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="20dp"
        >

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/username_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/secondary_text_dark"
        style="@android:style/Widget.EditText"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/username_textView"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/summary"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/total_notes"
            android:layout_marginTop="15dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/total_notes"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/no_notes"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/total_notes"
            app:layout_constraintTop_toBottomOf="@id/summary"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"

            android:textSize="20sp"

            />

    <TextView
        android:id="@+id/favourite_notes"
        android:layout_marginTop="15dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/favourite_notes"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/total_notes"
        app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            android:id="@+id/no_favourite_notes"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/favourite_notes"
            app:layout_constraintTop_toBottomOf="@id/no_notes"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"

            />

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite_notes"
        android:id="@+id/popular_category"
        android:layout_marginTop="15dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_catgory"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/no_popular_category"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/popular_category"
            app:layout_constraintTop_toBottomOf="@id/no_favourite_notes"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textAlignment="center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

